# iTmux

./: .gitignore  .search-docs.json  AGENTS.md  README.md  pyproject.toml  refactoring-memo.md  research-report.dry-principle.v1.md  research.iterm2-window-creation.v1.md  research.tmux-connection-redesign.v1.md
docs/: ARCHITECTURE.md  TESTING_STRATEGY.md  USAGE.md
docs/ideas/: Tmuxウィンドウがview-modeに入る現象.md  gateway-connection-strategy.md  iTerm2 Python APIとtmux連携.md  iTerm2とtmux連携の表示改善.md  iTerm_tmux 連携時のベル音抑制.md  refactoring-session-to-window.md  tmux view-mode 原因調査.md
docs/reports/: investigation-notes.v1.md  research-report.gateway-window.v1.md
scripts/: itmux
src/itmux/: __init__.py  cli.py  config.py  exceptions.py  iterm2_bridge.py  models.py  orchestrator.py
src/itmux/gateway/: __init__.py  gateway_manager.py
src/itmux/iterm2/: __init__.py  bridge.py  window_manager.py
src/itmux/tmux/: __init__.py  hook_manager.py  session_manager.py
tests/: __init__.py  conftest.py
tests/e2e/: conftest.py  test_e2e_basic.py  test_e2e_edge.py
tests/itmux/: __init__.py  test_cli.py  test_config.py  test_iterm2_bridge.py  test_models.py  test_orchestrator.py
