[project]
name = "itmux"
version = "0.1.0"
description = "iTerm2 + tmux orchestration tool for project-based window management"
readme = "README.md"
authors = [
    { name = "Naoto Kato", email = "naoto.kato@plaid.co.jp" }
]
requires-python = ">=3.12"
dependencies = [
    "iterm2>=2.7",
    "click>=8.0",
]

[project.scripts]
itmux = "itmux.cli:main"

[build-system]
requires = ["uv_build>=0.8.12,<0.9.0"]
build-backend = "uv_build"
