[project]
name = "itmux"
version = "0.1.0"
description = "iTerm2 + tmux orchestration tool for project-based window management"
readme = "README.md"
authors = [
    { name = "Naoto Kato", email = "naoto.kato@plaid.co.jp" }
]
requires-python = ">=3.12"
dependencies = [
    "iterm2>=2.7",
    "click>=8.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
itmux = "itmux.cli:main"

[build-system]
requires = ["uv_build>=0.8.12,<0.9.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
